# ChangeLog for dev-python/docopt
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  15 Mar 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  docopt-0.6.1.ebuild:
  Update PYTHON_COMPAT after testing against implementations supported by the
  python-r1 suite.

  27 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  docopt-0.6.1.ebuild:
  Drop empty IUSE.

*docopt-0.6.1 (06 Feb 2013)

  06 Feb 2013; Stijn Tintel (stintel) <stijn+gentoo@linux-ipv6.be>
  +docopt-0.6.1.ebuild, +metadata.xml:
  Initial import. Ebuild by me.
